2016-12-05  Even Rouault  <even.rouault at spatialys.com>

	* Major overhaul of Makefile build system to use autoconf/automake.
        Contributed by Sandro Mani: https://github.com/manisandro/shapelib/tree/autotools

	* Warning fixes in contrib/

2016-12-04  Even Rouault  <even.rouault at spatialys.com>

	* shpopen.c, dbfopen.c, shptree.c, shapefil.h: resync with
	GDAL Shapefile driver. Mostly cleanups. SHPObject and DBFInfo
	structures extended with new members. New functions:
	DBFSetLastModifiedDate, SHPOpenLLEx, SHPRestoreSHX,
	SHPSetFastModeReadObject

	* sbnsearch.c: new file to implement original ESRI .sbn spatial
	index reading. (no write support). New functions:
	SBNOpenDiskTree, SBNCloseDiskTree, SBNSearchDiskTree,
	SBNSearchDiskTreeInteger, SBNSearchFreeIds

	* Makefile, makefile.vc, CMakeLists.txt, shapelib.def: updates
	with new file and symbols.

	* commit: helper script to cvs commit

2013-11-26  Frank Warmerdam  <warmerdam@pobox.com>

	* CMakeLists.txt: CMake support from Alan W. Irwin.

	* dbfdump.c: untested reporting for deleted records.

2012-04-10  Frank Warmerdam  <warmerdam@google.com>

	* Shapelib 1.3.0 released.

2012-01-27  Frank Warmerdam  <warmerdam@pobox.com>

	* shptree.c: optimize quadtree generation (gdal #4472)

2012-01-24  Frank Warmerdam  <warmerdam@google.com>

	* shpopen.c: fix memory leaks on failure to open .shp file.

2011-12-11  Frank Warmerdam  <warmerdam@pobox.com>

	* shptree.c,h: Use SAHooks for .qix access (gdal #3365)

2011-09-14  Frank Warmerdam  <warmerdam@pobox.com>

	* shpopen.c: fix missing cast (#2344)

2011-07-24    <warmerdam@pobox.com>

	* shpopen.c, dbfopen.c, shptree.c, shapefil.h: Minimize use of 
	CPL services in favor of SAHooks.Error(). 

	* Makefile: Remove all the shared library building stuff, it is just
	too half assed, and results in all sorts of bug reports and complaints.
	Instead just install a static libshp.a.

2011-07-23    <warmerdam@pobox.com>
